--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -51,11 +51,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install safety pip-audit
+        continue-on-error: true
 
       - name: Run pip-audit
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements.txt || true
           pip-audit --desc on --fix --dry-run || true
+        continue-on-error: true
 
       - name: Run Safety check
         run: |
