refactor: comprehensive security, performance, and stability improvements
Security:
- Add src/utils/validation.py with path traversal protection, filename sanitization, ZIP bomb detection, and safe JSON loading
- Harden research_intake_server.py with 500MB ZIP extraction limit and path validation
- All file operations now validate paths stay within project boundaries

Performance:
- Refactor Edison client with async context manager and connection pooling
- Reuse HTTP connections across multiple API calls
- Add configurable timeout (DEFAULT_TIMEOUT = 1200s)

Stability:
- Replace bare except clauses with specific exception types in gap_resolver.py and data_analyst.py
- Fix cache.py to handle Phase 2 stages (clear, clear_from_stage, get_status now use ALL_STAGES)
- Add comprehensive error handling throughout

Testing:
- Add 20 new unit tests for validation utilities (test_validation.py)
- All 121 unit tests passing

Documentation:
- Update README with Phase 2 agents and new architecture
- Expand .gitignore with workflow cache and temp file patterns

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,19 @@ dist/
 # Logs
 *.log
 logs/
+workflow_*.log
 
 # Ignore specific files
 .github/copilot-instructions.md
-/user-input
+
+# User data (sensitive research projects)
+/user-input/*
+!/user-input/README.md
+
+# Workflow cache
+.workflow_cache/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
