fix(security): harden code execution and align docs
- Prevent subprocess execution from inheriting API keys/tokens\n- Make external API key checks opt-in integration tests\n- Fix caching guidance bug and align README/Copilot instructions\n- Add pyarrow dependency for Parquet support\n- Update SECURITY policy\n\nTest: pytest

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ rich>=13.7.0
 
 # Data and finance APIs (optional, used by DataAnalyst and API key checks)
 pandas>=2.2.0
+pyarrow>=15.0.0
 yfinance>=0.2.48
 nasdaq-data-link>=1.0.4
 alpha-vantage>=3.0.0
