--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ pytest-asyncio>=1.0.0
 # JSON schema validation (Evidence Ledger MVP)
 jsonschema>=4.23.0
 
+# PDF parsing (Sprint 1 literature ingest)
+pypdf>=4.0.0
+
