--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pytest-asyncio>=1.0.0
 
 # JSON schema validation (Evidence Ledger MVP)
 jsonschema>=4.23.0
+rfc3339-validator>=0.1.4
 
 # PDF parsing (Sprint 1 literature ingest)
 pypdf>=4.0.0
